--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   provider: ^4.1.2
+  cloud_firestore: ^0.13.5
+  firebase_auth: ^0.16.0
+  firebase_storage: ^3.1.5
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
