--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  flutter_staggered_grid_view: ^0.3.2
+  transparent_image: ^1.0.0
   cupertino_icons: ^0.1.3
   provider: ^4.1.2
   cloud_firestore: ^0.13.7
