--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.3.2
   transparent_image: ^1.0.0
   cupertino_icons: ^0.1.3
-  provider: ^4.1.2
+  provider: ^4.1.3
   cloud_firestore: ^0.13.7
   firebase_auth: ^0.16.0
   firebase_storage: ^3.1.5
@@ -40,11 +40,11 @@ dependencies:
   image_picker: ^0.6.7+11
   image_cropper: ^1.2.2
   via_cep: ^1.0.6
+  sliding_up_panel: ^1.0.2
   uuid: ^2.0.4
   dio: ^3.0.9
   brasil_fields: ^0.1.0
   geolocator: ^5.3.1
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
