--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   dio: ^3.0.9
   brasil_fields: ^0.1.0
   geolocator: ^5.3.1
+  gallery_saver: ^2.0.1
+  screenshot: ^0.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
