--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   geolocator: ^5.3.1
   gallery_saver: ^2.0.1
   screenshot: ^0.2.0
+  flutter_signin_button: ^1.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
