--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   gallery_saver: ^2.0.1
   screenshot: ^0.2.0
   flutter_signin_button: ^1.0.0
+  flutter_facebook_login: ^3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
