--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   screenshot: ^0.2.0
   flutter_signin_button: ^1.0.0
   flutter_facebook_login: ^3.0.0
+  url_launcher: ^5.7.10
 dev_dependencies:
   flutter_test:
     sdk: flutter
