--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -48,5 +48,19 @@
      <key>NSMicrophoneUsageDescription</key>
      <string>Acessar camera para adicionar imagem</string>
 
+     <key>LSApplicationQueriesSchemes</key>
+     <array>
+      <string>fbapi</string>
+      <string>fb-messenger-share-api</string>
+      <string>fbauth2</string>
+      <string>fbshareextension</string>
+      <string>comgooglemaps</string>
+      <string>iosamap</string>
+      <string>waze</string>
+     <array>
+
+
+
+
 </dict>
 </plist>
