--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "cielo": "^2.4.1",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0"
   },
